Bug 151974 - "Send outline to clipboard" and pasting indents previous headings
Summary: "Send outline to clipboard" and pasting indents previous headings
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
: 135659 147953 151728 154790 (view as bug list)
Depends on:
Blocks: Navigator Paragraph-Indent
  Show dependency treegraph
 
Reported: 2022-11-09 10:19 UTC by stragu
Modified: 2024-05-10 05:04 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
test document with example headings (11.10 KB, application/vnd.oasis.opendocument.text)
2022-11-09 10:20 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2022-11-09 10:19:34 UTC
Description:
When copying an outline and pasting it below existing headings, the previous headings get indentend / tabulated.

Steps to Reproduce:
1. Create some headings in Writer (or use example document)
2. Go to Sidebar > Navigator deck > Right-click on "Headings" > Send outline to clipboard
3. Paste at the bottom of the document

Actual Results:
Previous headings are indented

Expected Results:
Previous headings are not modified


Reproducible: Always


User Profile Reset: Yes

Additional Info:
In: 

Version: 7.4.2.3 / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b57307e8f3553fcb292c9c11fcf58bcef3a6cb3c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Works as expected in:

Version: 7.3.6.2 / LibreOffice Community
Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2022-11-09 10:20:20 UTC
Created attachment 183493 [details]
test document with example headings
Comment 2 Dieter 2022-11-22 21:16:06 UTC
I confirm it with

Version: 7.4.3.1 (x64) / LibreOffice Community
Build ID: 3793858a34d8fef5b92f8fee233f97766f05e281
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 3 stragu 2022-11-23 10:49:33 UTC
note that undoing with Ctrl + Z does not remove the indentation.

Bibisected to:
 faeda2f58063d879eb04de2da80ebed99b080d59 is the first bad commit
commit faeda2f58063d879eb04de2da80ebed99b080d59
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Aug 3 22:14:41 2022 +0200
    
    source 49b432d2c42000a561494c82fa56646424f3d288

 instdir/program/libswlo.so           | Bin 23152616 -> 23152640 bytes
 instdir/program/libwriterfilterlo.so | Bin 3501728 -> 3501728 bytes
 instdir/program/setuprc              |   2 +-
 instdir/program/versionrc            |   2 +-
 4 files changed, 2 insertions(+), 2 deletions(-)

Which points to (cherry-picked):

commit 49b432d2c42000a561494c82fa56646424f3d288
author	Vasily Melenchuk <vasily.melenchuk@cib.de>	Thu May 26 12:05:58 2022 +0300
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Wed Aug 03 21:56:29 2022 +0200
tree a6b03be5c072ec02c091951eedc03ca414e47405
parent ea753b9c35616efa203dd6eddc524b54b198768a

tdf#148360: sw: do not ignore list label followed by

...even if numbering is empty.

Since this is a core change to avoid impact on other formats
(mostly ODT) it is implemented as a new document setting.

Change-Id: I35e1cec97eb40f9f3411e3ba74cb553bd8afac59
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134989
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit a7d9837a8aa6d1233f4c21e4db5d32428a3ffc58)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137717

Vasily, could you please have a look? Thanks!

git bisect log
# bad: [84c8ef56869631d6f245bb03dda89fc864c7b9f0] source 403ff3d3ccba1498568e82e4840a12e53a188406
# good: [36b1ce7e6118699fd36c37261da7f24f935b41ac] source 229123ccc6f90ebf66b3e659bebbd53f8a9bdd3a
git bisect start 'origin/master' 'oldest'
# good: [ed646e1db031892ffd209a1a5ee0f8e05d584582] source 1e7be382b1f400801d350067e4dfd40d4cfd2db3
git bisect good ed646e1db031892ffd209a1a5ee0f8e05d584582
# good: [58040a927cfb1f0f0f1c9adcb23a1461af827a91] source 71dee51995d46d0c820c83790d521fbd6bdd568d
git bisect good 58040a927cfb1f0f0f1c9adcb23a1461af827a91
# good: [a72085ebf57badbf8f32c9865efd6cafe2e578ae] source 6c3e1ec7d2177271ea6e01da4cedce022823c622
git bisect good a72085ebf57badbf8f32c9865efd6cafe2e578ae
# good: [1443894950b710c72f5d2697589d5c33cb23f574] source ee68863baa51e47ae9bb00373fce2f86ba8df1e8
git bisect good 1443894950b710c72f5d2697589d5c33cb23f574
# bad: [1306f53a9f337a49523273b123afd5318bbb4212] source 0fefdd80d4420d794882e2e4790e4937c2130100
git bisect bad 1306f53a9f337a49523273b123afd5318bbb4212
# good: [19f37eaa4c770c9f73f4573f0a5ea0b58bb64a90] source 552d89a28f7d40d61195849bfa09cd923e92a969
git bisect good 19f37eaa4c770c9f73f4573f0a5ea0b58bb64a90
# good: [d4d752362a198208e0454d48a08a4fd2dee0743b] source fb63d0a090b049c16993054f1804e440adeba5d7
git bisect good d4d752362a198208e0454d48a08a4fd2dee0743b
# bad: [b287b3b2c1f27df3205d61540508b44f71f1d32b] source 400caafbc169860f6511b8b270843089206966c4
git bisect bad b287b3b2c1f27df3205d61540508b44f71f1d32b
# good: [360b7eb3993fca0fc82826c0deb21ad04739ab09] source fbda13af0e1106a201ef939318a0bb2b63d98973
git bisect good 360b7eb3993fca0fc82826c0deb21ad04739ab09
# good: [6eda8ccd534d1764c8740cc5705ab5ec5f38951e] source ea753b9c35616efa203dd6eddc524b54b198768a
git bisect good 6eda8ccd534d1764c8740cc5705ab5ec5f38951e
# bad: [0f0578bdfc0e17fbc60e725ef805f4e88858cc5b] source dbabf7184e976d696a475a313fe57cd83e3d2e41
git bisect bad 0f0578bdfc0e17fbc60e725ef805f4e88858cc5b
# bad: [c93ddb00e2cb9fcc1c392363576f97632a7c7711] source ebd3bfb761429870887ddf025acb859d9ec4aa22
git bisect bad c93ddb00e2cb9fcc1c392363576f97632a7c7711
# bad: [faeda2f58063d879eb04de2da80ebed99b080d59] source 49b432d2c42000a561494c82fa56646424f3d288
git bisect bad faeda2f58063d879eb04de2da80ebed99b080d59
# first bad commit: [faeda2f58063d879eb04de2da80ebed99b080d59] source 49b432d2c42000a561494c82fa56646424f3d288
Comment 4 Commit Notification 2023-05-02 23:17:47 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d0a87f97e2c9ac50cd6ce329ca8256daf94ead4

tdf#151974: writerfilter: apply props only to new document

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-05 08:51:04 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/5d508772a6567325f5ea3749d16f5cea4cceea43

tdf#151974: writerfilter: apply props only to new document

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-05-05 11:48:31 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b10417eb1e5a4a6959e7fc1cdd9819e5b09d39a4

tdf#151974: sw_uiwriter3: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Dieter 2023-05-20 08:40:05 UTC
VERIFIED with

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 4b3d3354119b643ec20aaad187d0a6506ea307fb
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Vasily, thank you for fixing it!
Comment 8 Mike Kaganski 2023-07-06 09:24:51 UTC
*** Bug 151728 has been marked as a duplicate of this bug. ***
Comment 9 Mike Kaganski 2024-02-07 04:55:23 UTC
*** Bug 147953 has been marked as a duplicate of this bug. ***
Comment 10 Mike Kaganski 2024-02-07 05:14:18 UTC
*** Bug 135659 has been marked as a duplicate of this bug. ***
Comment 11 Buovjaga 2024-05-10 05:04:09 UTC
*** Bug 154790 has been marked as a duplicate of this bug. ***